[gd_scene load_steps=11 format=3 uid="uid://8mg3nl7fxjbc"]

[ext_resource type="Script" path="res://Scripts/Menus/pause_menu.gd" id="1_nxbch"]
[ext_resource type="Shader" path="res://assets/misc_res/pauseMenu.gdshader" id="2_a2sqy"]
[ext_resource type="Theme" uid="uid://dxl7ye1121i88" path="res://assets/themes/mainMenu_theme.tres" id="3_3447o"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_p62ui"]
shader = ExtResource("2_a2sqy")
shader_parameter/lod = 0.0

[sub_resource type="SystemFont" id="SystemFont_0gsms"]
font_names = PackedStringArray("VCR OSD Mono")
subpixel_positioning = 0

[sub_resource type="SystemFont" id="SystemFont_ej3ie"]
font_names = PackedStringArray("VCR OSD Mono")
subpixel_positioning = 0

[sub_resource type="SystemFont" id="SystemFont_4h84u"]
font_names = PackedStringArray("VCR OSD Mono")
subpixel_positioning = 0

[sub_resource type="Animation" id="Animation_5yhf4"]
resource_name = "Blur"
length = 0.3
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:material:shader_parameter/lod")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0, 0.676, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 0.3)
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Salir:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Reiniciar:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Continuar:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath(".:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_jp6ja"]
length = 0.001
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:material:shader_parameter/lod")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Salir:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Reiniciar:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Continuar:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath(".:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_r5e5n"]
_data = {
"Blur": SubResource("Animation_5yhf4"),
"RESET": SubResource("Animation_jp6ja")
}

[node name="PauseMenu" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 8
size_flags_stretch_ratio = 6.22
auto_translate = false
localize_numeral_system = false
script = ExtResource("1_nxbch")

[node name="ColorRect" type="ColorRect" parent="."]
process_mode = 3
material = SubResource("ShaderMaterial_p62ui")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Continuar" type="Button" parent="."]
modulate = Color(1, 1, 1, 0)
layout_direction = 1
layout_mode = 2
anchor_left = 0.379
anchor_top = 0.3
anchor_right = 0.638
anchor_bottom = 0.39
offset_left = -55.46
offset_right = 54.34
offset_bottom = 0.019989
grow_horizontal = 2
grow_vertical = 2
size_flags_stretch_ratio = 0.0
auto_translate = false
localize_numeral_system = false
theme = ExtResource("3_3447o")
theme_override_fonts/font = SubResource("SystemFont_0gsms")
theme_override_font_sizes/font_size = 30
text = "Continuar"

[node name="Reiniciar" type="Button" parent="."]
modulate = Color(1, 1, 1, 0)
layout_mode = 2
anchor_left = 0.385
anchor_top = 0.467
anchor_right = 0.641
anchor_bottom = 0.556
offset_left = -57.9
offset_top = -0.119995
offset_right = 55.84
offset_bottom = -0.0400391
theme = ExtResource("3_3447o")
theme_override_fonts/font = SubResource("SystemFont_ej3ie")
theme_override_font_sizes/font_size = 30
text = "Reiniciar"

[node name="Salir" type="Button" parent="."]
modulate = Color(1, 1, 1, 0)
layout_mode = 2
anchor_left = 0.398
anchor_top = 0.628
anchor_right = 0.63
anchor_bottom = 0.717
offset_left = -64.12
offset_top = -0.0800018
offset_right = 61.34
theme = ExtResource("3_3447o")
theme_override_fonts/font = SubResource("SystemFont_4h84u")
theme_override_font_sizes/font_size = 30
text = "Salir"

[node name="Blur" type="AnimationPlayer" parent="."]
process_mode = 3
libraries = {
"": SubResource("AnimationLibrary_r5e5n")
}

[connection signal="pressed" from="Continuar" to="." method="_on_continuar_pressed"]
[connection signal="pressed" from="Reiniciar" to="." method="_on_reiniciar_pressed"]
[connection signal="pressed" from="Salir" to="." method="_on_salir_pressed"]
